--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
+    "@rainbow-me/rainbowkit": "^1.2.0",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "less": "^4.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "viem": "^1.18.2",
+    "wagmi": "^1.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
